--- a/src/stylesheets/Experience.css
+++ b/src/stylesheets/Experience.css
@@ -1,23 +1,21 @@
-.wrapper-experiences {
+.wrapper-experience {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 50%;
-    margin: auto;
-    margin-top: 4vw;
+    align-items: center;
 }
 
-.default-title-experiences {
-    font-family: 'Playfair-Display';
-    font-weight: 900;
-    font-size: 5.7vw;
-    text-align: center;
-    color: black;
-    width: 100%;
-    text-shadow: 0px 3px 6px #d4d4d4;
-    margin-top: 0px;
+.experience-content {
+    width: 60%;
 }
 
+.experience-metadata {
+    display: flex;
+    flex-direction: row;
+    align-items: normal;
+
+    justify-content: space-between;
+}
 
 /* Media Queries source:  */
 /* http://devfacts.com/media-queries-breakpoints-2020/ */
